# ADNI_Preprocessing

./: README.md  install.bat  install.sh  show_img.ipynb  test.js
.ipynb_checkpoints/: show_img-checkpoint.ipynb
conversion/: clipping.ipynb  mgz2nii.ipynb  mgz2nii.py
conversion/.ipynb_checkpoints/: mgz2nii-checkpoint.ipynb
freesurfer/: build_freesurfer.sh
mni_space/dependencies/mincview/: CMakeLists.txt  readme
mni_space/dependencies/mincview/Applications/: CMakeLists.txt
mni_space/dependencies/mincview/Applications/Basic/: CMakeLists.txt  MINCReader.cpp  MINCReader.h  attrib2usacquisitioninfo.cpp  attrib2usacquisitioninfo.h  doublewindowfileviewer.cpp  doublewindowfileviewer.h  editvolumetransferfunctionwidget.cpp  editvolumetransferfunctionwidget.h  expertmode.cpp  expertmode.h  generatedsurface.cpp  generatedsurface.h  imageobject.cpp  imageobject.h  imagetracer.cpp  imagetracer.h  mincwithobj.cpp  mincwithobj.h  movepointcommand.cpp  movepointcommand.h  pickcommand.cpp  pickcommand.h  pickerobject.cpp  pickerobject.h  pickrefiner.cpp  pickrefiner.h  pointsobject.cpp  pointsobject.h  polydataobject.cpp  polydataobject.h  regridvolume.cpp  regridvolume.h  reslicer.cpp  reslicer.h  scenemanager.cpp  scenemanager.h  sceneobject.cpp  sceneobject.h  spectrumicons.h  (+16 more)
mni_space/dependencies/mincview/Applications/Basic/gui/: aboutbicigns.cpp  aboutbicigns.h  aboutbicignsbase.ui  clearselectedpointdialog.cpp  clearselectedpointdialog.h  clearselectedpointdialogbase.ui  doubleviewwindow.cpp  doubleviewwindow.h  doubleviewwindowbase.ui  editpointcoordinates.cpp  editpointcoordinates.h  edittransformdialog.cpp  edittransformdialog.h  edittransformdialogbase.ui  entertextdialogbase.ui  hardwaresettings.cpp  hardwaresettings.h  hardwaresettingsbase.ui  imageobjectsettingsdialog.cpp  imageobjectsettingsdialog.h  imageobjectsettingsdialogbase.ui  importmenufunctions.cpp  importmenufunctions.h  maskdialog.cpp  maskdialog.h  maskdialogbase.ui  mincinfowidget.cpp  mincinfowidget.h  mincinfowidgetbase.ui  multiplefileviewerdialog.cpp  multiplefileviewerdialog.h  multiplefileviewerdialogbase.ui  objectlistdialog.cpp  objectlistdialog.h  objectlistdialogbase.ui  opendatafiledialog.cpp  opendatafiledialog.h  opendatafiledialogbase.ui  passworddialog.cpp  passworddialog.h  (+54 more)
mni_space/dependencies/mincview/Applications/MincView/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h
mni_space/dependencies/mincview/CMakeCommon/: FindMinc.cmake  FindMinc1.cmake  FindMinc2.cmake  InstallLocation.cmake
mni_space/dependencies/mincview/GlobalIgns/: CMakeLists.txt  README  ignsconfig.h  ignsglobals.h  ignsmsg.h  stringtools.cpp  stringtools.h  version.h
mni_space/dependencies/mincview/qtExtensions/: CMakeLists.txt  qtextfiledialog.cpp  qtextfiledialog.h  qtextlistviewitem.cpp  qtextlistviewitem.h  qtutilities.h  serializer.h
mni_space/dependencies/mincview/vtk/: CMakeLists.txt  vtkIgnsEvents.h  vtkReal.h  vtkmatrix4x4utilities.h
mni_space/dependencies/mincview/vtk/vtkExtensions/: CMakeLists.txt  vtkCircleWithCrossSource.cxx  vtkCircleWithCrossSource.h  vtkColorTransferFunctionActor.cxx  vtkColorTransferFunctionActor.h  vtkColorTransferFunctionWidget.cxx  vtkColorTransferFunctionWidget.h  vtkCrosshairWidget.cxx  vtkCrosshairWidget.h  vtkGrid.cxx  vtkGrid.h  vtkImageDimensionReorder.cxx  vtkImageDimensionReorder.h  vtkImagePlaneActor.cxx  vtkImagePlaneActor.h  vtkLineWithHandlesWidget.cxx  vtkLineWithHandlesWidget.h  vtkListOfSphereWithTextPointWidgets.cxx  vtkListOfSphereWithTextPointWidgets.h  vtkMulti3DWidget.cxx  vtkMulti3DWidget.h  vtkMultiImagePlaneWidget.cxx  vtkMultiImagePlaneWidget.h  vtkMultiInteractorObserver.cxx  vtkMultiInteractorObserver.h  vtkNShapeCalibrationWidget.cxx  vtkNShapeCalibrationWidget.h  vtkPiecewiseFunctionActor.cxx  vtkPiecewiseFunctionActor.h  vtkPiecewiseFunctionLookupTable.cxx  vtkPiecewiseFunctionLookupTable.h  vtkPiecewiseFunctionWidget.cxx  vtkPiecewiseFunctionWidget.h  vtkPlaneAndAxisActor.cxx  vtkPlaneAndAxisActor.h  vtkProgressTerminalOutput.h  vtkSphereWithTextPointWidget.cxx  vtkSphereWithTextPointWidget.h  vtkUltrasoundImageStencilSource.cxx  vtkUltrasoundImageStencilSource.h  (+2 more)
mni_space/dependencies/mincview/vtk/vtkMNI/: CMakeLists.txt  vtkTagReader.cxx  vtkTagReader.h  vtkTagWriter.cxx  vtkTagWriter.h  vtkXFMReader.cxx  vtkXFMReader.h  vtkXFMWriter.cxx  vtkXFMWriter.h
mni_space/dependencies/mincview/vtk/vtkMinc/: CMakeLists.txt  vtkMINC2.h  vtkMINCIcv.cxx  vtkMINCIcv.h  vtkMINCImageAttributes2.cxx  vtkMINCImageAttributes2.h  vtkMINCImageReader2.cxx  vtkMINCImageReader2.h  vtkMINCReader.cxx  vtkMINCReader.h  vtkMINCWriter.cxx  vtkMINCWriter.h  vtkMNIOBJReader.cxx  vtkMNIOBJReader.h  vtkSimpleMINCReader.h
mni_space/dependencies/mincview/vtk/vtkQt/: CMakeLists.txt  vtkQtAsyncCallback.cpp  vtkQtAsyncCallback.h  vtkQtCallback.cpp  vtkQtCallback.h  vtkQtImageViewer.cpp  vtkQtImageViewer.h  vtkQtMatrixDialog.cpp  vtkQtMatrixDialog.h  vtkQtProgressDialog.cpp  vtkQtProgressDialog.h  vtkQtRenderWindow.cpp  vtkQtRenderWindow.h  vtkQtRenderWindowInteractor.cpp  vtkQtRenderWindowInteractor.h
mni_space/dependencies/mni_autoreg-0.99.6/: Makefile.in  aclocal.m4  config.h.in  configure
mni_space/dependencies/mni_autoreg-0.99.6/Proglib/: Makefile.in
mni_space/dependencies/mni_autoreg-0.99.6/Testing/: Makefile.in
mni_space/dependencies/mni_autoreg-0.99.6/make_phantom/: Makefile.in  make_phantom.c
mni_space/dependencies/mni_autoreg-0.99.6/mincbbox/: Makefile.in  mincbbox.c
mni_space/dependencies/mni_autoreg-0.99.6/mincblur/: Makefile.in  blur_support.h  blur_volume.c  fft.c  gradient_volume.c  gradmag_volume.c  gradmag_volume.h  kernel.h  mincblur.1  mincblur.c  mincblur.h
mni_space/dependencies/mni_autoreg-0.99.6/mincchamfer/: Makefile.in
mni_space/dependencies/mni_autoreg-0.99.6/minctracc/: Makefile.in  minctracc.1
mni_space/dependencies/mni_autoreg-0.99.6/perl/: Makefile.in  autocrop.1  autocrop.in  mritoself.1  mritoself.in  mritotal.in  xfmtool.in
mni_space/dependencies/netcdf-3.5.0/src/fortran/: netcdf.3f
(+31 files in other folders)
